# HYDRA

./: .dockerignore  .env.example  .gitignore  .zenodo.json  404.html  CITATION.cff  Estructura_HYDRA.graphml  GPM_download.ipynb  LICENSE  Memoria Doctorado Industrial - Salvador Navas.docx  OGIMET_download.ipynb  Organización_HYDRA_MdJ.graphml  PI_2026_SALVADOR_NAVAS_v2.docx  README.md  environment.yml  index.html  jupyter_server_config.py  mkdocs.yml  pyproject.toml  revision_contenido_tesis.md  setup.py  sitemap.xml
Climate/: README.md
Data_Sources/: README.md
HYDRA/: auth.py  utils.py
Modeling/: README.md
api/: Dockerfile  main.py  requirements.txt
data/: README.md  setup.py
docker/: Dockerfile  Dockerfile.jupyter  Dockerfile.web  cosmos_py-0.1.0-py3-none-any.whl  docker-compose.yml  nginx.conf  nginx.conf.template  precompile_stan.py  requirements.txt
docs/: index.md  instalacion.md
examples/: 01_bias_correction.py  02_event_extraction.py  03_stochastic_cosmos.py  04_precipitation_nsrp.py
infra/: main.bicep  main.bicepparam
instalacion/: index.html
notebooks/: AEMET_download.ipynb  CDS_download.ipynb  ERA-5_download.ipynb  ESGF_download.ipynb  GPM_download.ipynb  OGIMET_download.ipynb  PERSSIAN_download.ipynb  Statistical_Downscaling.ipynb  combinaciones_validas_daily.csv  estaciones_ogimet_all.csv  public_execution_report.json
pyhydra/: __init__.py  utils.py
scratch/: modify_notebooks.py
scripts/: download_ogimet_north_spain.py  exec_nb.py  execute_all_notebooks.py  smoke_hms_calibration.py
tests/: conftest.py  test_aemet.py  (+15 more)
(+479 files in other folders)
